Feature: Add Orb of Gravitation custom item
Throw a gravity orb (slow Snowball tagged with its owner) that is NOT
consumed on throw - the item is only consumed once the orb resolves:
- right-click while it is in flight detonates it manually, or it
  detonates on natural impact
- detonation pulls all enemies within range (4 blocks) toward the
  centre at 0.55 velocity per tick with line-of-sight checks,
  applies Slowness I for 5s, and draws shrinking light-yellow->red
  beams as targets close in (colour-lerp progress marker)
- bow counterplay: 4 fully-charged bow shots (arrows tagged
  FULLY_CHARGED_ARROW at force >= 0.95) shatter the orb, which also
  resolves the item (consumed)
- includes a dust trail while in flight